--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,15 +20,18 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+4
+  json_annotation: ^3.0.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  build_runner: ^1.8.0
+  json_serializable: ^3.2.5
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
