--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+4
   json_annotation: ^3.0.1
+  pull_to_refresh: ^1.5.8
 
 
   # The following adds the Cupertino Icons font to your application.
