--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,13 @@ description: Mobile SSS, mainly SCM
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+4
+  http_interceptor: any
   json_annotation: ^3.0.1
   pull_to_refresh: ^1.5.8
 
