--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http_interceptor: any
   json_annotation: ^3.0.1
   pull_to_refresh: ^1.5.8
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
