--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   json_annotation: ^3.0.1
   pull_to_refresh: ^1.5.8
   intl: ^0.16.1
+  shared_preferences: ^0.5.7+1
 
 
   # The following adds the Cupertino Icons font to your application.
