--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<!--- Flutter App --->
+    <key>io.flutter.embedded_views_preview</key>
+    <true/>
 </dict>
 </plist>
