--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   pull_to_refresh: ^1.5.8
   intl: ^0.16.1
   shared_preferences: ^0.5.7+1
+  google_maps_flutter: ^0.5.27+1
+  google_maps_place_picker: ^0.9.4
 
 
   # The following adds the Cupertino Icons font to your application.
