--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   shared_preferences: ^0.5.7+1
   google_maps_flutter: ^0.5.27+1
   google_maps_place_picker: ^0.9.4
+  flutter_bloc: ^4.0.0
+  meta: ^1.1.6
+  equatable: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
