--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dartz: ^0.9.2
   http: ^0.12.0+4
   http_interceptor: any
   json_annotation: ^3.0.1
