--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   dartz: ^0.9.2
+  mockito: ^4.1.3
   http: ^0.12.0+4
   http_interceptor: any
   json_annotation: ^3.0.1
