--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   dartz: ^0.9.2
   mockito: ^4.1.3
+  get_it: ^5.0.1
   http: ^0.12.0+4
   http_interceptor: any
   json_annotation: ^3.0.1
@@ -29,7 +30,7 @@ dependencies:
   shared_preferences: ^0.5.7+1
   google_maps_flutter: ^0.5.27+1
   google_maps_place_picker: ^0.9.4
-  flutter_bloc: ^4.0.0
+  flutter_bloc: ^6.0.0
   meta: ^1.1.6
   equatable: ^1.0.0
 
