--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,17 +22,16 @@ dependencies:
   dartz: ^0.9.2
   mockito: ^4.1.3
   get_it: ^5.0.1
-  http: ^0.12.0+4
-  http_interceptor: any
   json_annotation: ^3.0.1
   pull_to_refresh: ^1.5.8
   intl: ^0.16.1
   shared_preferences: ^0.5.7+1
   google_maps_flutter: ^0.5.27+1
   google_maps_place_picker: ^0.9.4
-  flutter_bloc: ^6.0.0
+  flutter_bloc: ^6.1.0
   meta: ^1.1.6
   equatable: ^1.0.0
+  dio: ^3.0.10
 
 
   # The following adds the Cupertino Icons font to your application.
