--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,18 @@ test:
         - coverage/
       expire_in: 5 days
 
+test-ios:
+    stage: test
+    script:
+      - flutter test --coverage
+      - genhtml coverage/lcov.info --output=coverage
+    artifacts:
+      paths:
+        - coverage/
+      expire_in: 5 days
+    tags:
+      - ios
+
 ####################### IOS ###############################
 
 ipa.testflight:
