--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,16 +14,16 @@ variables:
     tags:
         - gitlab-org-docker
 
-test:
-    extends: .android_docker_image
-    stage: test
-    script:
-      - flutter test --coverage
-      - genhtml coverage/lcov.info --output=coverage
-    artifacts:
-      paths:
-        - coverage/
-      expire_in: 5 days
+# test:
+    # extends: .android_docker_image
+    # stage: test
+    # script:
+    #   - flutter test --coverage
+    #   - genhtml coverage/lcov.info --output=coverage
+    # artifacts:
+    #   paths:
+    #     - coverage/
+    #   expire_in: 5 days
 
 test-ios:
     stage: test
