--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ description: Mobile SSS, mainly SCM
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 35.0.0+1
 
+flutter:
+  uses-material-design: true
+
 environment:
   sdk: ">=2.2.0 <3.0.0"
 
@@ -24,7 +27,6 @@ dependencies:
   get_it: ^5.0.1
   json_annotation: ^3.0.1
   pull_to_refresh: ^1.5.8
-  intl: ^0.16.1
   shared_preferences: ^0.5.7+1
   google_maps_flutter: ^0.5.27+1
   google_maps_place_picker: ^0.9.4
@@ -34,12 +36,21 @@ dependencies:
   dio: ^3.0.10
   environment_config:
   cupertino_icons: ^0.1.2
+  intl_utils: ^1.9.0
 
 dev_dependencies:
   build_runner: ^1.8.0
   json_serializable: ^3.2.5
   flutter_test:
     sdk: flutter
+
+
+flutter_intl:
+  main_locale: cs_CZ # Optional. Sets the main locale used for generating localization files. Provided value should consist of language code and optional script and country codes separated with underscore (e.g. 'en', 'en_GB', 'zh_Hans', 'zh_Hans_CN'). Default: en
+  enabled: true # Required. Must be set to true to activate the package. Default: false
+  class_name: S # Optional. Sets the name for the generated localization class. Default: S
+  arb_dir: lib/core/localization/l10n # Optional. Sets the directory of your ARB resource files. Provided value should be a valid path on your system. Default: lib/l10n
+  output_dir: lib/core/localization/generated # Optional. Sets the directory of generated localization files. Provided value should be a valid path on your system. Default: lib/generated
 
 environment_config:
   path: env_config.dart
@@ -53,5 +64,4 @@ environment_config:
       const: true
       default: 'https://sss.suma.guru/api'
 
-flutter:
-  uses-material-design: true
+
