--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   environment_config:
   cupertino_icons: ^0.1.2
   intl_utils: ^1.9.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   build_runner: ^1.8.0
