--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,12 @@ dependencies:
   mockito: ^4.1.3
   get_it: ^5.0.1
   json_annotation: ^3.0.1
-  pull_to_refresh: ^1.5.8
-  shared_preferences: ^0.5.7+1
-  google_maps_flutter: ^0.5.27+1
-  google_maps_place_picker: ^0.9.4
+  shared_preferences: ^0.5.12+4
+  google_maps_flutter: ^1.0.6
+  google_maps_place_picker: ^1.0.0
   flutter_bloc: ^6.1.0
-  meta: ^1.1.6
-  equatable: ^1.0.0
+  meta: ^1.2.3
+  equatable: ^1.2.5
   dio: ^3.0.10
   environment_config:
   cupertino_icons: ^0.1.2
@@ -42,7 +41,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.8.0
-  json_serializable: ^3.2.5
+  json_serializable: ^3.5.0
   flutter_test:
     sdk: flutter
 
