--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,8 +45,10 @@ ipa.testflight:
     - cd ios/
     - gem install bundler
     - bundle install --path vendor/bundle
-    # - flutter build ios 2>&1 || true
-    # - flutter pub run environment_config:generate
+    - flutter pub get
+    - flutter pub run environment_config:generate
+
+
   script:
     - bundle exec fastlane beta
   tags:
@@ -96,10 +98,11 @@ apk.prod_track:
     # this will fetch the base64 encoded key store from our CI variables, decode it and place it underneath the path specified in build.gradle
     - echo "$PLAY_STORE_UPLOAD_KEY" | base64 --decode > android/key.jks
     - cd android/
-    - gem install bundler
-    - bundle install
     - flutter pub get
     - flutter pub run environment_config:generate
+    - gem install bundler
+    - bundle install
+
   script:
     - flutter build apk --release --build-number=$CI_PIPELINE_ID --build-name=1.0.$CI_PIPELINE_ID
     - bundle exec fastlane upload_to_play_store_prod_track
