--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,41 +1,41 @@
 stages:
-    - test
-    - deployment
+  - test
+  - deployment
 
 before_script:
-   - source .${CI_COMMIT_REF_NAME}.env
+  - source .${CI_COMMIT_REF_NAME}.env
 
 variables:
-    LC_ALL: "en_US.UTF-8"
-    LANG: "en_US.UTF-8"
+  LC_ALL: "en_US.UTF-8"
+  LANG: "en_US.UTF-8"
 
 .android_docker_image:
-    image: cirrusci/flutter:1.22.2
-    tags:
-        - docker
+  image: cirrusci/flutter:1.22.2
+  tags:
+    - docker
 
- test:
-     extends: .android_docker_image
-     stage: test
-     script:
-       - flutter test --coverage
-       - genhtml coverage/lcov.info --output=coverage
-     artifacts:
-       paths:
-         - coverage/
-       expire_in: 5 days
+test:
+  extends: .android_docker_image
+  stage: test
+  script:
+    - flutter test --coverage
+    - genhtml coverage/lcov.info --output=coverage
+  artifacts:
+    paths:
+      - coverage/
+    expire_in: 5 days
 
-#test-ios:
-#    stage: test
-#    script:
-#      - flutter test --coverage
-#      - genhtml coverage/lcov.info --output=coverage
-#    artifacts:
-#      paths:
-#        - coverage/
-#      expire_in: 5 days
-#    tags:
-#      - ios
+test-ios:
+  stage: test
+  script:
+    - flutter test --coverage
+    - genhtml coverage/lcov.info --output=coverage
+  artifacts:
+    paths:
+      - coverage/
+    expire_in: 5 days
+  tags:
+    - ios
 
 ####################### IOS ###############################
 
@@ -59,7 +59,7 @@ ipa.testflight:
 ipa.submit_to_review:
   stage: deployment
   script:
-   - bundle exec fastlane production
+    - bundle exec fastlane production
   when: manual
   allow_failure: false
   only:
@@ -114,17 +114,17 @@ apk.prod_track:
     - master
 
 apk.promote_to_production:
-    stage: deployment
-    extends: .android_docker_image
-    before_script:
-      # this will fetch the base64 encoded key store from our CI variables, decode it and place it underneath the path specified in build.gradle
-      - echo "$PLAY_STORE_UPLOAD_KEY" | base64 --decode > android/key.jks
-      - cd android/
-      - gem install bundler
-      - bundle install
+  stage: deployment
+  extends: .android_docker_image
+  before_script:
+    # this will fetch the base64 encoded key store from our CI variables, decode it and place it underneath the path specified in build.gradle
+    - echo "$PLAY_STORE_UPLOAD_KEY" | base64 --decode > android/key.jks
+    - cd android/
+    - gem install bundler
+    - bundle install
 
-    script: bundle exec fastlane promote_prod_to_production
-    when: manual
-    allow_failure: false
-    only:
-      - master
+  script: bundle exec fastlane promote_prod_to_production
+  when: manual
+  allow_failure: false
+  only:
+    - master
