--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   environment_config:
   cupertino_icons: ^0.1.2
   intl_utils: ^1.9.0
+  flutter_form_builder: ^3.14.1
   flutter_localizations:
     sdk: flutter
 
