--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_form_builder: ^3.14.1
   flutter_localizations:
     sdk: flutter
+  pedantic: ^1.9.0
 
 dev_dependencies:
   build_runner: ^1.8.0
