--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   environment_config:
   cupertino_icons: ^0.1.2
   intl_utils: ^1.9.0
-  flutter_form_builder: ^3.14.1
+  intl: 0.16.1
+  flutter_form_builder: ^3.13.6
+  form_builder_map_field:
   flutter_localizations:
     sdk: flutter
   pedantic: ^1.9.0
@@ -46,6 +48,9 @@ dev_dependencies:
   json_serializable: ^3.5.0
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  google_maps_flutter: ^1.0.6
 
 
 flutter_intl:
