--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   pedantic: ^1.9.0
+  pretty_dio_logger: ^1.1.1
 
 dev_dependencies:
   build_runner: ^1.8.0
