--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,20 +45,31 @@ dependencies:
   sentry: ">=3.0.0 <4.0.0"
 
 dev_dependencies:
-  build_runner: ^1.8.0
-  json_serializable: ^3.5.0
   flutter_test:
     sdk: flutter
+  build_runner: ^1.8.0
+  json_serializable: ^3.5.0
+  flutter_launcher_icons: ^0.8.1
+  flutter_native_splash: ^0.1.9
 
 dependency_overrides:
   google_maps_flutter: ^1.0.6
 
-
 flutter_intl:
-  main_locale: cs_CZ # Optional. Sets the main locale used for generating localization files. Provided value should consist of language code and optional script and country codes separated with underscore (e.g. 'en', 'en_GB', 'zh_Hans', 'zh_Hans_CN'). Default: en
-  enabled: true # Required. Must be set to true to activate the package. Default: false
-  class_name: S # Optional. Sets the name for the generated localization class. Default: S
-  arb_dir: lib/core/localization/l10n # Optional. Sets the directory of your ARB resource files. Provided value should be a valid path on your system. Default: lib/l10n
-  output_dir: lib/core/localization/generated # Optional. Sets the directory of generated localization files. Provided value should be a valid path on your system. Default: lib/generated
+  main_locale: cs_CZ
+  enabled: true
+  class_name: S
+  arb_dir: lib/core/localization/l10n
+  output_dir: lib/core/localization/generated
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/2048x2048.png"
+
+flutter_native_splash:
+  image: assets/2048x2048.png
+  color: "ffffff"
+  ios: true
+  android: true
 
