--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ version: 35.0.0+1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/2048x2048.png
 
 environment:
   sdk: ">=2.2.0 <3.0.0"
@@ -64,13 +66,14 @@ flutter_intl:
 
 flutter_icons:
   android: true
-  ios: true
+  ios: false
   image_path: "assets/2048x2048.png"
   adaptive_icon_background: "ffffff"
 
 flutter_native_splash:
   image: assets/2048x2048.png
   color: "ffffff"
-  ios: true
+  ios: false
   android: true
+  fill: false
 
