--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   pedantic: ^1.9.0
   pretty_dio_logger: ^1.1.1
   sentry: ">=3.0.0 <4.0.0"
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
