--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,11 +43,12 @@ test:macos:
 ipa:testflight:
   stage: deployment
   before_script:
-    - source .${CI_COMMIT_REF_NAME}.env
     - cd ios/
     - gem install bundler
     - bundle install --path vendor/bundle
     - flutter pub get
+    - source .${CI_COMMIT_REF_NAME}.env
+    - pub run environment_config:generate
   script:
     - bundle exec fastlane beta
   tags:
@@ -92,13 +93,14 @@ apk:alpha_track:
   stage: deployment
   extends: .android_docker_image
   before_script:
-    - source .${CI_COMMIT_REF_NAME}.env
     # this will fetch the base64 encoded key store from our CI variables, decode it and place it underneath the path specified in build.gradle
     - echo "$PLAY_STORE_UPLOAD_KEY" | base64 --decode > android/key.jks
     - cd android/
     - gem install bundler
     - bundle install
     - flutter pub get
+    - source .${CI_COMMIT_REF_NAME}.env
+    - pub run environment_config:generate
   script:
     - flutter build apk --release --build-number=$CI_PIPELINE_ID --build-name=1.0.$CI_PIPELINE_ID
     - bundle exec fastlane beta
