--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   pedantic: ^1.9.0
   pretty_dio_logger: ^1.1.1
   sentry: ^3.0.1
-  modal_progress_hud: ^0.1.3
+  environment_config: ^2.2.4
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +57,21 @@ dev_dependencies:
 
 dependency_overrides:
   google_maps_flutter: ^1.0.6
+
+environment_config:
+  path: env_config.dart
+  dotenv_path: .env
+  class: EnvConfig
+
+  fields:
+    API_URL:
+      env_var: API_URL
+      const: true
+      default: https://sss.suma.guru/api
+    SENTRY_ENV:
+      env_var: SENTRY_ENV
+      const: true
+      default: sss.suma.guru
 
 flutter_intl:
   main_locale: cs_CZ
