--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ test:macos:
 
 ipa:testflight:
   extends: test:macos
+  needs: [test:macos]
   stage: deployment
   before_script:
     - source .${CI_COMMIT_REF_NAME}.env
@@ -77,8 +78,6 @@ ipa:push_tags:
     - git config user.name "${GITLAB_USER_NAME}"
     - git remote add tag-origin https://syky27:${GITLAB_ACCESS_TOKEN}@${CI_REPO_PATH}
     - git push tag-origin --tags
-  dependencies:
-    - ipa:submit_to_review
 
 ipa:sentry:dsyms:
   extends: ipa:push_tags
@@ -87,8 +86,6 @@ ipa:sentry:dsyms:
     - bundle exec fastlane monitoring
     - brew install getsentry/tools/sentry-cli
     - sentry-cli releases set-commits --auto $CI_PIPELINE_ID
-  dependencies:
-    - ipa:submit_to_review
 
 
 
