--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SSS</string>
+	<string>Suma Vehicle Manager</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -65,6 +65,5 @@
 	<string>Zaznamenání parkovaní</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
-
 </dict>
 </plist>
